--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
+html{
+	height: 100%
+}
  body{
 	 background-image: url('../pics/bg-body.jpg');
-	 background-size: cover
+	 background-size: cover;
  }
