--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 html{
 	height: 100%
 }
  body{
-	 background-image: url('../pics/bg-body.jpg');
-	 background-size: contain;
+	 background: url('../pics/bg-body.jpg') green repeat center center fixed;
+	 color: white;
+	 font: bold 20px/27px 'Roboto', sans-serif;
  }
