--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
-html{
-	height: 100%
+* {
+	box-sizing: border-box;
 }
- body{
-	 background: url('../pics/bg-body.jpg') green repeat center center fixed;
-	 color: white;
-	 font: bold 20px/27px 'Roboto', sans-serif;
- }
+
+body{
+	 background: url('../pics/bg-body.jpg');
+	 margin: 0;
+}
+div{
+	background-color: white;
+	width: 400px;
+	padding: 20px;
+	margin: 20px auto;	
+	border-left: 10px solid green;
+	border-right: 10px solid red;
+}
