--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
 * {
 	box-sizing: border-box;
@@ -8,11 +8,49 @@ body{
 	 background: url('../pics/bg-body.jpg');
 	 background-size: cover;
 	 margin: 0;
+	 font-family: "Oswald", serif;
 }
-div{
+
+.box{
 	background-color: white;
 	max-width: 600px;
 	width: 90%;
-	padding: 20px;
 	margin: 40px auto;
+	box-shadow: 0 0 30px rgba(0,0,0,0.7)
+}
+
+.box .box-content{
+	padding: 20px;
+}
+
+.box .box-content p{
+	color: grey;
+}
+
+.box .box-content h2{
+	margin: 0;
+	color: green;
+}
+
+.box .box-content .details {
+	margin: 16px 0 0 0;
+}
+
+.box .box-content .details a{
+	background: orange;
+	color: black;
+	padding: 5px 10px;
+	display: inline-block;
+	text-decoration: none;
+}
+
+.box .header-image{
+	background-image: url('../pics/image1.jpg');
+	background-size: cover;
+	background-position: top center;
+	height: 200px;
+}
+
+.box.box-2 .header-image{
+	background-image: url('../pics/image2.jpg');
 }
