--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-	 background: url('../pics/bg-body.jpg');
+	 background: url('https://s57-hzfi.freeconvert.com/task/678e9311829613f544c20db0/scontent-cdg4-2.cdninstagram.com-....jpg');
 	 background-size: cover;
 	 margin: 0;
 	 font-family: "Oswald", serif;
@@ -45,7 +45,7 @@ body{
 }
 
 .box .header-image{
-	background-image: url('../pics/image1.jpg');
+	background-image: url('https://4kwallpapers.com/images/walls/thumbs_3t/20123.jpg');
 	background-size: cover;
 	background-position: top center;
 	height: 200px;
