--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-	 background: url('https://s57-hzfi.freeconvert.com/task/678e9311829613f544c20db0/scontent-cdg4-2.cdninstagram.com-....jpg');
+	 background: url('https://s98-ious.freeconvert.com/task/678e944b5557a50604d0a049/scontent-vie1-1.cdninstagram.com-....png');
 	 background-size: cover;
 	 margin: 0;
 	 font-family: "Oswald", serif;
