--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,8 @@
 }
 
 body{
-	 background: url('https://s98-ious.freeconvert.com/task/678e944b5557a50604d0a049/scontent-vie1-1.cdninstagram.com-....png');
-	 background-size: cover;
-	 background-position: top center;
+	 background: url('../pics/bg-body.jpg') top center;
+	  background-size: cover;
 	 margin: 0;
 	 font-family: "Oswald", serif;
 }
@@ -46,7 +45,7 @@ body{
 }
 
 .box .header-image{
-	background-image: url('https://4kwallpapers.com/images/walls/thumbs_3t/20123.jpg');
+	background-image: url('../pics/image1.jpg');
 	background-size: cover;
 	background-position: top center;
 	height: 200px;
