--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body{
 	 background: url('../pics/bg-body.jpg') top center;
-	  background-size: cover;
+	 background-size: cover;
 	 margin: 0;
 	 font-family: "Oswald", serif;
 }
@@ -45,9 +45,8 @@ body{
 }
 
 .box .header-image{
-	background-image: url('../pics/image1.jpg');
+	background: url('../pics/image1.jpg') top center;
 	background-size: cover;
-	background-position: top center;
 	height: 200px;
 }
 
